# TeamSquirtle

./: .reviewboardrc  CMakeLists.txt  COPYING-ICONS  TeamSquirtleConfig.cmake.in
colors/: TeamSquirtle.colors  TeamSquirtleDark.colors  TeamSquirtleHighContrast.colors  TeamSquirtleLight.colors
cursors/: CMakeLists.txt
cursors/TeamSquirtle/: CMakeLists.txt  build.sh
cursors/TeamSquirtle/TeamSquirtle/cursors/: alias  all-scroll  bottom_left_corner  bottom_right_corner  bottom_side  cell  center_ptr  col-resize  color-picker  context-menu  copy  default  dnd-move  dnd-no-drop  down-arrow  draft  fleur  help  left-arrow  left_side  no-drop  openhand  pencil  pointer  progress  right-arrow  right_ptr  right_side  row-resize  size_bdiag  size_fdiag  size_hor  size_ver  text  top_left_corner  top_right_corner  top_side  up-arrow  vertical-text  x-cursor  (+2 more)
cursors/TeamSquirtle/src/: index.theme
cursors/TeamSquirtle_Snow/: CMakeLists.txt  COPYING-ICONS  build.sh
cursors/TeamSquirtle_Snow/TeamSquirtle_Snow/: index.theme
kdecoration/: CMakeLists.txt  Messages.sh  config-teamsquirtle.h.cmake  teamsquirtle.h  teamsquirtle.json  teamsquirtlebutton.cpp  teamsquirtlebutton.h  teamsquirtledecoration.cpp  teamsquirtledecoration.h  teamsquirtleexceptionlist.cpp  teamsquirtleexceptionlist.h  teamsquirtlesettings.kcfgc  teamsquirtlesettingsdata.kcfg  teamsquirtlesettingsprovider.cpp  teamsquirtlesettingsprovider.h  teamsquirtlesizegrip.cpp  teamsquirtlesizegrip.h
kdecoration/config/: teamsquirtleconfigwidget.cpp  teamsquirtleconfigwidget.h  teamsquirtledecorationconfig.desktop  teamsquirtledetectwidget.cpp  teamsquirtledetectwidget.h  teamsquirtleexceptiondialog.cpp  teamsquirtleexceptiondialog.h  teamsquirtleexceptionlistwidget.cpp  teamsquirtleexceptionlistwidget.h  teamsquirtleexceptionmodel.cpp  teamsquirtleexceptionmodel.h  teamsquirtleitemmodel.cpp  teamsquirtleitemmodel.h  teamsquirtlelistmodel.h
kdecoration/config/ui/: teamsquirtleconfigurationui.ui  teamsquirtledetectwidget.ui  teamsquirtleexceptiondialog.ui  teamsquirtleexceptionlistwidget.ui
kstyle/: CMakeLists.txt  config-teamsquirtle.h.cmake  teamsquirtle.h  teamsquirtle.json  teamsquirtle.kcfg  teamsquirtle.themerc  teamsquirtleaddeventfilter.cpp  teamsquirtleaddeventfilter.h  teamsquirtleframeshadow.cpp  teamsquirtleframeshadow.h  teamsquirtlehelper.cpp  teamsquirtlehelper.h  teamsquirtlemdiwindowshadow.cpp  teamsquirtlemdiwindowshadow.h  teamsquirtlemnemonics.cpp  teamsquirtlemnemonics.h  teamsquirtlepropertynames.cpp  teamsquirtlepropertynames.h  teamsquirtleshadowhelper.cpp  teamsquirtleshadowhelper.h  teamsquirtlesplitterproxy.cpp  teamsquirtlesplitterproxy.h  teamsquirtlestyle.cpp  teamsquirtlestyle.h  teamsquirtlestyleconfigdata.kcfgc  teamsquirtlestyleplugin.cpp  teamsquirtlestyleplugin.h  teamsquirtletileset.cpp  teamsquirtletileset.h  teamsquirtlewindowmanager.cpp  teamsquirtlewindowmanager.h
kstyle/animations/: teamsquirtleanimation.cpp  teamsquirtleanimation.h  teamsquirtleanimationdata.cpp  teamsquirtleanimationdata.h  teamsquirtleanimations.cpp  teamsquirtleanimations.h  teamsquirtlebaseengine.cpp  teamsquirtlebaseengine.h  teamsquirtlebusyindicatordata.cpp  teamsquirtlebusyindicatordata.h  teamsquirtlebusyindicatorengine.cpp  teamsquirtlebusyindicatorengine.h  teamsquirtledatamap.h  teamsquirtledialdata.cpp  teamsquirtledialdata.h  teamsquirtledialengine.cpp  teamsquirtledialengine.h  teamsquirtleenabledata.cpp  teamsquirtleenabledata.h  teamsquirtlegenericdata.cpp  teamsquirtlegenericdata.h  teamsquirtleheaderviewdata.cpp  teamsquirtleheaderviewdata.h  teamsquirtleheaderviewengine.cpp  teamsquirtleheaderviewengine.h  teamsquirtlescrollbardata.cpp  teamsquirtlescrollbardata.h  teamsquirtlescrollbarengine.cpp  teamsquirtlescrollbarengine.h  teamsquirtlespinboxdata.cpp  teamsquirtlespinboxdata.h  teamsquirtlespinboxengine.cpp  teamsquirtlespinboxengine.h  teamsquirtlestackedwidgetdata.cpp  teamsquirtlestackedwidgetdata.h  teamsquirtlestackedwidgetengine.cpp  teamsquirtlestackedwidgetengine.h  teamsquirtletabbardata.cpp  teamsquirtletabbardata.h  teamsquirtletabbarengine.cpp  (+11 more)
kstyle/config/: CMakeLists.txt  Messages.sh  main.cpp  teamsquirtlestyleconfig.cpp  teamsquirtlestyleconfig.desktop  teamsquirtlestyleconfig.h  teamsquirtlestyleconfigmodule.cpp  teamsquirtlestyleconfigmodule.h
kstyle/config/ui/: teamsquirtlestyleconfig.ui
kstyle/debug/: teamsquirtlewidgetexplorer.cpp  teamsquirtlewidgetexplorer.h
lookandfeel.dark/: metadata.desktop
lookandfeel.dark/contents/: defaults
misc/: CMakeLists.txt
misc/kde4teamsquirtle/src/: CMakeLists.txt  Messages.sh  kde4teamsquirtle.upd  main.cpp
misc/qtcurvepreset/: CMakeLists.txt
qtquickcontrols/: CMakeLists.txt  TeamSquirtle.qml  TeamSquirtle.qmlproject  qmldir
